# simple-opencv-kalman-tracker

./: CMakeLists.txt  README.md
source/: opencv-kalman.cpp
